# AutoService

./: .gitignore  404.html  AGENTS.MD  README.md  README_SVELTE_MIGRATION.md  debug_icon.py  index.html  main.py  mkdocs.yml  package.json  pnpm-lock.yaml  pyproject.toml  requirements.txt  test_devices.py  test_dialog.py  test_icon.py  test_resource_id.py  vite.config.js
.github/workflows/: docs.yml  release.yml
app/: system_info.py
data/programs/: .gitignore
data/settings/: programs.json  stacks.json
data/tools/: config.json
developer-guide/adding-service/: index.html
developer-guide/architecture/: index.html
developer-guide/backend-dev/: index.html
developer-guide/contributing/: index.html
developer-guide/dev-setup/: index.html
developer-guide/frontend-dev/: index.html
developer-guide/overview/: index.html
developer-guide/portable-layout/: index.html
developer-guide/python-runner/: index.html
developer-guide/settings-management/: index.html
docs/: index.md
docs/developer-guide/: adding-service.md  architecture.md  backend-dev.md  contributing.md  dev-setup.md  frontend-dev.md  overview.md  portable-layout.md  python-runner.md  settings-management.md
docs/user-guide/: component-tests.md  getting-started.md  overview.md  programs-tab.md  reports-tab.md  scripts-tab.md  service-tab.md  settings-tab.md  shortcuts-tab.md  system-info-tab.md
runner/: SENTRY_README.md  ai_utils.py  requirements.txt  sentry_config.py  service_runner.py  subprocess_utils.py  test_battery.py
runner/fixtures/: .env.example  README.md  test_adwcleaner.json  test_ai_browser_notification.json  test_ai_browser_notification_apply.json  test_ai_startup_disable.json  test_ai_startup_disable_apply.json  test_all.json  test_battery.json  test_battery_info.json  test_bleachbit.json  test_chkdsk.json  test_disk_space.json  test_dism.json  test_drivecleanup.json  test_furmark.json  test_heavyload.json  test_heavyload_minimal.json  test_iperf.json  test_kvrt.json  test_ping.json  test_sfc.json  test_smartctl.json  test_speedtest.json  test_stinger.json  test_stinger_report.json  test_whynotwin11.json  test_windows_update.json  test_windows_update_logs.json  test_windows_update_logs_ai.json  test_winsat.json
runner/services/: __init__.py  adwcleaner_service.py  ai_browser_notification_service.py  ai_startup_service.py  dism_service.py  (+21 more)
search/: search_index.json
settings/: settings.json
src/: __init__.py  app.py  index.html  main.js  styles.css
src-tauri/: Cargo.toml  build.rs  service_runner.spec  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: icons.rs  lib.rs  main.rs  models.rs  paths.rs  programs.rs  reports.rs  scripts.rs  servicing.rs  settings.rs  shortcuts.rs  state.rs  system.rs
web/: index.html
(+316 files in other folders)
