[project]
name = "autoservice"
version = "0.1.0"
description = "A USB-based Windows tool that runs portable virus scanners and generates system cleanup reports."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "gputil>=1.4.0",
    "psutil>=7.0.0",
    "py3nvml>=0.2.7",
    "pywebview>=5.4",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["app"]
