[project]
name = "autoservice"
version = "0.1.0"
description = "A USB-based Windows tool that runs portable virus scanners and generates system cleanup reports."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "batteryinfo>=0.1.5",
    "customtkinter>=5.2.2",
    "icoextract>=0.2.0",
    "pillow>=11.3.0",
    "psutil>=5.9.5",
    "pywin32>=311",
]
