[package]
name = "autoservice"
version = "0.1.0"
description = "a Windows 10/11 USB-based diagnostic and cleanup tool designed to automatically run virus scanners, hardware diagnostics, and stress tests, then generate detailed reports for customers or users. It aims to streamline tech support tasks by providing a one-stop toolkit for system health checks, cleaning, and component testing."
authors = ["SonnyTaylor"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "autoservice_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
base64 = "0.22"
once_cell = "1"
exeico = "0.1"
image = { version = "0.24", default-features = false, features = ["ico", "png"] }
sysinfo = "0.37"
battery = "0.7.8"
wgpu = "26.0.1"
tauri-plugin-shell = "2"
tokio = { version = "1", features = ["macros"] }

